--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
 						<p>If you want to bring a project to life, <span> say hello at:</span></p>
 
-						<p class="email">patricia.ciurescu@yahoo.com</p>
+						<p class="email">random@yahoo.com</p>
 
 				</div>
 
